--- a/src/Docnet.Core/Docnet.Core.csproj
+++ b/src/Docnet.Core/Docnet.Core.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Content Include="runtimes/**" PackagePath="runtimes" Visible="true" />
     <Content Include="build/net45/Docnet.Core.targets" Pack="true" PackagePath="build/net45/" />
+     <Content Include="build/net48/Docnet.Core.targets" Pack="true" PackagePath="build/net48/" />
     <None Include="../../assets/icon.png" Pack="true" PackagePath="/" />
   </ItemGroup>
 
